[package]
name = "asyncmsg"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
bytes = "1.5.0"
bytebuffer = "2.2.0"
log = "0.4.20"
anyhow = "1.0.75"
once_cell = { version = "1.18.0", features = [] }
